# ecolog-util

./: .gitignore  README.md  pyproject.toml
src/ecolog/util/: const.py
tests/: test_const.py
